--- a/styles/Subheader.module.css
+++ b/styles/Subheader.module.css
@@ -1,8 +1,6 @@
 .subheader {
-    text-transform: uppercase;
     font-size: x-large;
-    width: 100%;
-    margin: .5em auto;
+    /* margin: 1em auto; */
     margin-top: 0;
     text-align: center;
 }
