--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,10 @@ body {
   font-weight: 300;
 }
 
+.material-icons {
+  font-size: inherit;
+}
+
 a {
   color: inherit;
   text-decoration: underline;
