--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -17,7 +17,7 @@
     font-family: "NeueMontreal";
     src: url("/fonts/PPNeueMontreal-Book.otf") format("opentype");
     font-weight: 300;
-    font-style: normal;
+    font-style: light;
 }
 
 @font-face {
@@ -31,7 +31,7 @@
     font-family: "NeueMontreal";
     src: url("/fonts/PPNeueMontreal-Medium.otf") format("opentype");
     font-weight: 400;
-    font-style: bold;
+    font-style: normal;
 }
 
 @font-face {
@@ -45,5 +45,5 @@
     font-family: "NeueMontreal";
     src: url("/fonts/PPNeueMontreal-Bold.otf") format("opentype");
     font-weight: 800;
-    font-style: bolder;
+    font-style: bold;
 }
