--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,7 @@ a:hover, a:active {
 
   max-width: 640px;
   /* display: block; */
-  margin: 0px 2em;
+  margin: 0px auto;
 }
 
 .credit{
@@ -217,7 +217,8 @@ a:hover, a:active {
 
 @media (min-width: 1024px){
   .container{
-    max-width: 872px;
+    /* max-width: 872px; */
+    max-width: 95%;
   }
 }
 
