--- a/styles/globals.css
+++ b/styles/globals.css
@@ -193,10 +193,22 @@ a.dark:hover, a.dark:active {
   padding-bottom: 16px;
 }
 
-
 .bread-crumb a:active {
   text-decoration: none;
 }
+
+@layer utilities {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+    }
+  }
 
 
 .rotate {
