--- a/styles/globals.css
+++ b/styles/globals.css
@@ -222,7 +222,7 @@ a.dark:hover, a.dark:active {
   }
   .container-blog{
     max-width: 95%;
-    width: 640px;
+    width: 672px;
   }
 }
 
@@ -247,6 +247,6 @@ a.dark:hover, a.dark:active {
 
 /* Explicit styles */
 
-content{
+/* content{
   background-color:red;
-}
+} */
