--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -47,3 +47,59 @@
     font-weight: 800;
     font-style: bold;
 }
+
+@font-face {
+    font-family: "JBSansDisplay";
+    src: url("/fonts/jb-sans-display-737.ttf") format("opentype");
+    font-weight: 800;
+    font-style: black;
+}
+
+@font-face {
+    font-family: "JBSansDisplay";
+    src: url("/fonts/jb-sans-display-396.ttf") format("opentype");
+    font-weight: 500;
+    font-style: bold;
+}
+
+@font-face {
+    font-family: "JBSansDisplay";
+    src: url("/fonts/jb-sans-display-313.ttf") format("opentype");
+    font-weight: 400;
+    font-style: medium;
+}
+
+@font-face {
+    font-family: "JBSansDisplay";
+    src: url("/fonts/jb-sans-display-100.ttf") format("opentype");
+    font-weight: 100;
+    font-style: light;
+}
+
+@font-face {
+    font-family: "JBSansText";
+    src: url("/fonts/jb-sans-text-737.ttf") format("opentype");
+    font-weight: 800;
+    font-style: black;
+}
+
+@font-face {
+    font-family: "JBSansText";
+    src: url("/fonts/jb-sans-text-396.ttf") format("opentype");
+    font-weight: 500;
+    font-style: bold;
+}
+
+@font-face {
+    font-family: "JBSansText";
+    src: url("/fonts/jb-sans-text-313.ttf") format("opentype");
+    font-weight: 400;
+    font-style: medium;
+}
+
+@font-face {
+    font-family: "JBSansText";
+    src: url("/fonts/jb-sans-text-100.ttf") format("opentype");
+    font-weight: 100;
+    font-style: light;
+}
