--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -16,35 +16,35 @@
 @font-face {
     font-family: "NeueMontreal";
     src: url("/fonts/PPNeueMontreal-Book.otf") format("opentype");
-    font-weight: 300;
-    font-style: light;
-}
-
-@font-face {
-    font-family: "NeueMontreal";
-    src: url("/fonts/PPNeueMontreal-Italic.otf") format("opentype");
-    font-weight: 300;
-    font-style: italic;
-}
-
-@font-face {
-    font-family: "NeueMontreal";
-    src: url("/fonts/PPNeueMontreal-Medium.otf") format("opentype");
-    font-weight: 400;
+    font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
     font-family: "NeueMontreal";
+    src: url("/fonts/PPNeueMontreal-Italic.otf") format("opentype");
+    font-weight: 200;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "NeueMontreal";
+    src: url("/fonts/PPNeueMontreal-Book.otf") format("opentype");
+    font-weight: 300;
+    font-style: medium;
+}
+
+@font-face {
+    font-family: "NeueMontreal";
     src: url("/fonts/PPNeueMontreal-SemiBoldItalic.otf") format("opentype");
-    font-weight: 600;
+    font-weight: 500;
     font-style: italic;
 }
 
 @font-face {
     font-family: "NeueMontreal";
     src: url("/fonts/PPNeueMontreal-Bold.otf") format("opentype");
-    font-weight: 800;
+    font-weight: 600;
     font-style: bold;
 }
 
