--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -16,7 +16,7 @@
 @font-face {
     font-family: "NeueMontreal";
     src: url("/fonts/PPNeueMontreal-Book.otf") format("opentype");
-    font-weight: 200;
+    font-weight: 300;
     font-style: normal;
 }
 
@@ -31,7 +31,7 @@
     font-family: "NeueMontreal";
     src: url("/fonts/PPNeueMontreal-Book.otf") format("opentype");
     font-weight: 300;
-    font-style: normal;
+    font-style: medium;
 }
 
 @font-face {
@@ -43,7 +43,7 @@
 
 @font-face {
     font-family: "NeueMontreal";
-    src: url("/fonts/PPNeueMontreal-Bold.otf") format("opentype");
+    src: url("/fonts/PPNeueMontreal-Medium.otf") format("opentype");
     font-weight: 600;
     font-style: bold;
 }
